[tool.poetry]
name = "plj"
version = "0.1.0"
description = "clj-like functions in python3"
authors = ["Jason Verbeek <jvb@bigbrother.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
